--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,28 @@
 name: Build Mac App
 on: [push]
 jobs:
+
   release:
     runs-on: macos-latest
+    defaults:
+      run:
+        working-directory: . # Eğer dosyaların direkt ana dizindeyse nokta kalsın
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
+
       - name: Install dependencies
         run: npm install
+        # Eğer hata devam ederse burayı 'run: cd klasor_adin && npm install' yapabiliriz
+
       - name: Build DMG
         run: npm run build:mac
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
