--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,14 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm install
+        # 'samuray-pet' klasörün hangisiyse ismini tam yaz kanka
+        run: cd samuray-pet && npm install
 
       - name: Build DMG
-        run: npm run build:mac
+        run: cd samuray-pet && npm run build:mac
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: Samuray-Pet-Mac
-          path: dist/*.dmg
+          path: samuray-pet/dist/*.dmg
