--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,6 @@ jobs:
   release:
     runs-on: macos-latest
     steps:
-      - name: Install dependencies
-        run: npm install
-
-      
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -18,14 +14,16 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm install
+        # Robotu senin klasörüne sokuyoruz
+        run: cd samuray-pet && npm install
 
       - name: Build DMG
-        run: npm run build:mac
+        # Paketi o klasörün içinde oluşturuyoruz
+        run: cd samuray-pet && npm run build:mac
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: Samuray-Pet-Mac
-          path: dist/*.dmg
-          
+          # Paketin yerini tam tarif ediyoruz
+          path: samuray-pet/dist/*.dmg
